add attempts at view, model, and collection constructors. link to views.js, models.js, collections.js files in index.html.

--- a/app/index.html
+++ b/app/index.html
@@ -24,26 +24,9 @@
   <body>
 
     <div class="hero-unit">
-      <h1>'Allo, 'Allo!</h1>
-      <p>You now have</p>
+    <h1>BLAAAG</h1>
       <ul>
-        <li>HTML5 Boilerplate</li>
-        <li>Normalize CSS</li>
-
-        <li>Sass</li>
-
-
-        <li>Modernizr</li>
-
-
-        <li>Bourbon & Neat</li>
-
-
-        <li>UnderscoreJS</li>
-
       </ul>
-      <p>Don't forget to update your readme file!!</p>
-      <p>And here's some added content for testing out some things!</p>
     </div>
 
     <!-- build:js scripts/vendor.js -->
@@ -56,6 +39,9 @@
     <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
+        <script src="scripts/models/models.js"></script>
+        <script src="scripts/views/views.js"></script>
+        <script src="scripts/collections/collections.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
