changes to 'defaults' styling in model file. remove collections from its own file and add to model file.

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <!-- endbuild -->
 
     <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.scss">
     <!-- endbuild -->
 
     <!-- build:js scripts/vendor/modernizr.js -->
@@ -24,9 +24,10 @@
   <body>
 
     <div class="hero-unit">
-    <h1>BLAAAG</h1>
-      <ul>
-      </ul>
+        <h1>BLAAAG</h1>
+        <input type="text"><br />
+        <input type="text">
+
     </div>
 
     <!-- build:js scripts/vendor.js -->
