add more html inputs

--- a/app/index.html
+++ b/app/index.html
@@ -24,10 +24,15 @@
   <body>
 
     <div class="hero-unit">
-        <h1>BLAAAG</h1>
-        <input type="text"><br />
-        <input type="text">
-
+      <h1>BLAAAG</h1>
+        <form id="newBlogPost"> 
+          <input type="text" name="postTitle"/><br />
+          <input type="text" name="postContent"/>
+          <input type="text" name="postDate"/>
+          <input type="text" name="postDescription"/>
+          <input type="text" name="postAuthor"/>
+          <input type="text" name="postTags"/>
+        </form>
     </div>
 
     <!-- build:js scripts/vendor.js -->
