--- a/app/index.html
+++ b/app/index.html
@@ -28,10 +28,11 @@
         <form id="newBlogPost"> 
           <input type="text" name="postTitle"/><br />
           <input type="text" name="postContent"/>
-          <input type="text" name="postDate"/>
+          <input type="date" name="postDate"/>
           <input type="text" name="postDescription"/>
           <input type="text" name="postAuthor"/>
           <input type="text" name="postTags"/>
+          <button type="submit" name="postSubmit">Submit</button>
         </form>
     </div>
 
