--- a/app/index.html
+++ b/app/index.html
@@ -26,9 +26,9 @@
     <div class="hero-unit">
       <h1>BLAAAG</h1>
         <form id="newBlogPost"> 
-          <input type="text" name="postTitle"/><br />
-          <input type="text" name="postContent"/>
-          <input type="date" name="postDate"/>
+          <input type="text" name="postTitle"/>
+          <input type="date" name="postDate"/><br />
+          <textarea name="postContent" class="postContent" cols="30" rows="10"></textarea>
           <input type="text" name="postDescription"/>
           <input type="text" name="postAuthor"/>
           <input type="text" name="postTags"/>
