add classes to html input tags; add content to main.js

--- a/app/index.html
+++ b/app/index.html
@@ -28,12 +28,12 @@
     <div class="hero-unit">
       <h1>BLAAAG</h1>
         <form id="newBlogPost_input"> 
-          <input type="text" name="postTitle" placeholder="Your Post's Title"/>
-          <input type="date" name="postDate"/><br />
+          <input type="text" name="postTitle" class ="postTitle" placeholder="Your Post's Title"/>
+          <input type="date" name="postDate" class="postDate"/><br />
           <textarea name="postContent" class="postContent" cols="30" rows="10" placeholder="Post anything you like! :)"></textarea>
-          <input type="text" name="postDescription"/>
-          <input type="text" name="postAuthor" placeholder="Author"/>
-          <input type="text" name="postTags" placeholder="Add tags here separated by commas"/>
+          <input type="text" name="postDescription" class="postDescription"/>
+          <input type="text" name="postAuthor" class="postAuthor" placeholder="Author"/>
+          <input type="text" name="postTags" class="postTags" placeholder="Add tags here separated by commas"/>
           <button type="submit" name="postSubmit">Submit</button>
         </form>
         <div id="blogPost_output">
